# Remote-Paradox

./: .env.example  .gitignore  PLAN.md  README.md  findings.md  flash-sd.sh  progress.md  task_plan.md
.github/workflows/: build-android.yml
android-app/: build.gradle.kts  gradlew  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/res/drawable/: ic_launcher_foreground.xml
android-app/app/src/main/res/values/: strings.xml  themes.xml
android-app/watch-app/: build.gradle.kts  proguard-rules.pro
android-app/watch-app/src/main/: AndroidManifest.xml
android-app/watch-app/src/main/res/values/: strings.xml
docs/: pi-github-operations.md
paradox-bridge/: pyproject.toml
paradox-bridge/deploy/: boot-repair.sh  nginx-paradox-bridge.conf  setup-boot-fsck.sh  setup-boot-repair.sh  setup-nginx.sh  setup-wifi-watchdog.sh  wifi-watchdog.sh
paradox-bridge/scripts/: apply_update.sh  maintenance_job.sh  updater.py
paradox-bridge/src/paradox_bridge/: __init__.py  alarm.py  audit.py  auth.py  ble_server.py  cli.py  config.py  dashboard.py  database.py  demo_cli.py  main.py  models.py  tls.py  virtual_panel.py  ws.py
paradox-bridge/tests/: conftest.py  test_alarm.py  test_audit.py  test_auth.py  test_ble_server.py  test_boot_repair.py  test_config.py  test_database.py  test_main.py  test_maintenance.py  test_maintenance_job.py  test_setup_boot_fsck.py  test_ssl.py  test_updater.py  test_virtual_panel.py  test_wifi_watchdog.py  test_ws.py
web-app/: index.html
(+45 files in other folders)
